<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">blogapp</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <!--TODO ENTER YOUR APP ID BELOW-->
    <string name="facebook_app_id"/>
    <!--TODO ENTER YOUR APP ID BELOW (eg: fb0123456789)-->
    <string name="fb_login_protocol_scheme">fb</string>
    <!--TODO ENTER YOUR Client Token BELOW-->
    <string name="facebook_client_token"/>
<string name="lbl_here">here</string>
  <string name="msg_effective_sept">Effective: September 1, 2020</string>
  <string name="msg_see_all_people">SEE ALL PEOPLE YOU FOLLOW</string>
  <string name="msg_more_people_to">MORE PEOPLE TO FOLLOW</string>
  <string name="lbl_logout">Logout</string>
  <string name="lbl_next">Next</string>
  <string name="msg_don_t_have_an_a">Don\u2019t have an account? </string>
  <string name="lbl_books">Books</string>
  <string name="lbl_home">Home</string>
  <string name="msg_duis_aute_irure">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non</string>
  <string name="lbl_fiction">Fiction</string>
  <string name="msg_already_have_an">Already have an account? </string>
  <string name="lbl_topics">Topics</string>
  <string name="msg_add_or_edit_top">Add or edit topics you follow.
Choose three or more.</string>
  <string name="lbl_bezaleel_nwabia">Bezaleel Nwabia </string>
  <string name="msg_lorem_ipsum_dol3">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
  <string name="msg_lorem_ipsum_dol2">Lorem Ipsum dolor set amet</string>
  <string name="lbl_3_min_read">3 min read</string>
  <string name="lbl_lorem">Lorem</string>
  <string name="msg_lorem_ipsum_dol6">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
  <string name="lbl_applies_to_you">applies to you.</string>
  <string name="msg_lorem_ipsum_dol5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
  <string name="msg_lorem_ipsum_dol4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
  <string name="lbl_art">Art</string>
  <string name="lbl_sign_in">Sign in</string>
  <string name="lbl_programming">Programming</string>
  <string name="lbl_privacy_policy2">Privacy Policy </string>
  <string name="lbl_humor">Humor</string>
  <string name="msg_what_are_you_in">What are you interested in?</string>
  <string name="lbl_29_july">29 July</string>
  <string name="msg_your_account_an">Your Account and Responsibilities</string>
  <string name="msg_image_credit_l">Image Credit: Lorem Ipsum</string>
  <string name="msg_sign_up_with_tw">Sign up with Twitter</string>
  <string name="msg_you_can_see_our2">You can see our previous Terms </string>
  <string name="lbl_gaming">Gaming</string>
  <string name="lbl_top_stories">TOP STORIES</string>
  <string name="msg_sign_in_with_go">Sign in with Google</string>
  <string name="msg_by_signing_up2">By signing up, you agree to our </string>
  <string name="lbl_technology">Technology</string>
  <string name="lbl_publication">Publication</string>
  <string name="lbl_people">People</string>
  <string name="lbl_logo">LOGO</string>
  <string name="lbl_content">CONTENT</string>
  <string name="msg_sharing_of_info">Sharing of Information</string>
  <string name="lbl_activity">Activity</string>
  <string name="lbl_psychology">Psychology</string>
  <string name="msg_terms_and_condi2">Terms and conditions</string>
  <string name="msg_tisanthan_panch">tisanthan panchsadram followed you. 
18 Oct</string>
  <string name="msg_sign_in_with_tw">Sign in with Twitter</string>
  <string name="msg_third_party_emb">Third-Party Embeds</string>
  <string name="lbl_welcome">Welcome</string>
  <string name="lbl_visual_design">Visual Design</string>
  <string name="lbl_design">Design</string>
  <string name="msg_sign_in_with_fa">Sign in with Facebook</string>
  <string name="lbl_5_nov">5 Nov</string>
  <string name="msg_followed_you">followed you. 
18 Oct</string>
  <string name="lbl_clapped_for">clapped for
</string>
  <string name="lbl_16_days_ago">16 days ago</string>
  <string name="lbl_explore_topics">Explore Topics</string>
  <string name="msg_terms_and_condi">Terms and Conditions</string>
  <string name="lbl_responded_to">responded to
</string>
  <string name="msg_sign_up_with_ap">Sign up with Apple</string>
  <string name="lbl_science">Science</string>
  <string name="msg_collection_of_i">Collection of Information</string>
  <string name="lbl_your_choices">Your Choices</string>
  <string name="lbl_cryptocurrency">Cryptocurrency</string>
  <string name="msg_7_things_you_ne">7 things you need to know about flutter state Management </string>
  <string name="lbl_follow">Follow</string>
  <string name="msg_lorem_ipsum_is2">Lorem Ipsum is
 a dummy text</string>
  <string name="lbl_business">Business</string>
  <string name="lbl_sign_up">Sign up.</string>
  <string name="msg_lorem_ipsum_dol">Lorem Ipsum Dolor</string>
  <string name="lbl_ipsum">Ipsum</string>
  <string name="lbl_privacy_policy">Privacy policy</string>
  <string name="msg_sign_up_with_go">Sign up with Google</string>
  <string name="lbl_image_credit">Image Credit: </string>
  <string name="lbl_interests">Interests</string>
  <string name="lbl_film">Film</string>
  <string name="lbl_feminism">Feminism</string>
  <string name="msg_use_of_informat">Use of Information</string>
  <string name="msg_tisanthan_panch2">tisanthan panchsadram </string>
  <string name="msg_arts_entertai">ARTS &amp; ENTERTAINMENT</string>
  <string name="lbl_search">Search</string>
  <string name="lbl_nonfiction">Nonfiction</string>
  <string name="msg_artificial_inte">Artificial Intelligence</string>
  <string name="lbl_john_doe">John Doe</string>
  <string name="lbl_creativity">Creativity</string>
  <string name="lbl_1_nov">1 Nov</string>
  <string name="lbl_register_now">Register Now</string>
  <string name="msg_by_signing_up">By signing up, you agree to our Terms of Service and
acknowledge that our Privacy Policy applies to you.</string>
  <string name="lbl_health">Health</string>
  <string name="lbl_music">Music</string>
  <string name="msg_john_doe_in_lor">John Doe in Lorem Ipsum</string>
  <string name="lbl_lorem_ipsum">Lorem Ipsum</string>
  <string name="lbl_following">Following</string>
  <string name="msg_sign_up_with_fa">Sign up with Facebook</string>
  <string name="lbl_welcome_back">Welcome back.</string>
  <string name="msg_terms_of_servic">Terms of Service</string>
  <string name="msg_you_can_see_our">You can see our previous Terms here</string>
  <string name="msg_lorem_ipsum_is">Lorem Ipsum is 
a dummy text</string>
  <string name="lbl_catalunha_mj">catalunha.mj </string>
  <string name="msg_sign_in_with_ap">Sign in with Apple</string>
  <string name="lbl_education">Education</string>
  <string name="msg_catalunha_mj_re">catalunha.mj responded to
7 things you need to know about flutter state Management 1 Nov</string>
  <string name="lbl_explore">Explore</string>
  <string name="msg_recommended_for">RECOMMENDED FOR YOU</string>
  <string name="msg_bezaleel_nwabia">Bezaleel Nwabia clapped for
7 things you need to know about flutter state Management 5 Nov</string>
  <string name="lbl_comics">Comics</string>
  <string name="msg_and_acknowledge"> and
acknowledge that our </string>
</resources>
